[gd_scene load_steps=12 format=1]

[ext_resource path="res://Scenes/Room.gd" type="Script" id=1]
[ext_resource path="res://Textures/Sprites/meimei_happy.png" type="Texture" id=2]
[ext_resource path="res://Scripts/animessage3.gd" type="Script" id=3]
[ext_resource path="res://Scripts/room_interview.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Ubuntu.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Scripts/room_math.gd" type="Script" id=6]
[ext_resource path="res://Scripts/room_poetry.gd" type="Script" id=7]
[ext_resource path="res://Textures/Buttons/HintButton_default.png" type="Texture" id=8]
[ext_resource path="res://Textures/Buttons/HintButton_hover.png" type="Texture" id=9]
[ext_resource path="res://Textures/blank.png" type="Texture" id=10]
[ext_resource path="res://Scripts/note_room.gd" type="Script" id=11]

[node name="Room" type="TextureFrame"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 960.0
stretch_mode = 0
script/script = ExtResource( 1 )

[node name="mei_poetry" type="Sprite" parent="."]

transform/pos = Vector2( 360.25, 529.5 )
transform/scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )

[node name="mei_math" type="Sprite" parent="."]

transform/pos = Vector2( 360.25, 529.5 )
transform/scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )

[node name="mei_interview" type="Sprite" parent="."]

transform/pos = Vector2( 228.25, 529.5 )
transform/scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )

[node name="SingleDialog" type="Panel" parent="."]

editor/display_folded = true
visibility/opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 800.0
margin/right = 1240.0
margin/bottom = 920.0

[node name="Message" type="RichTextLabel" parent="SingleDialog"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 40.0
margin/right = 600.0
margin/bottom = 60.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0
script/script = ExtResource( 3 )

[node name="Timer1" type="Timer" parent="SingleDialog"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = true

[node name="Button" type="Button" parent="SingleDialog"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1074.0
margin/top = 62.0
margin/right = 1130.0
margin/bottom = 82.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "I see..."
flat = false

[node name="Interview" type="Panel" parent="."]

visibility/opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 440.0
margin/top = 200.0
margin/right = 1240.0
margin/bottom = 320.0
script/script = ExtResource( 4 )

[node name="Message" type="RichTextLabel" parent="Interview"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 42.0
margin/right = 400.0
margin/bottom = 62.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="Timer" type="Timer" parent="Interview"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[node name="Choices" type="Panel" parent="Interview"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 160.0
margin/right = 800.0
margin/bottom = 410.0

[node name="A" type="Button" parent="Interview/Choices"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 26.0
margin/right = 398.0
margin/bottom = 56.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="B" type="Button" parent="Interview/Choices"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 98.0
margin/right = 398.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="C" type="Button" parent="Interview/Choices"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 170.0
margin/right = 400.0
margin/bottom = 200.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Math" type="Panel" parent="."]

visibility/opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 440.0
margin/top = 200.0
margin/right = 1240.0
margin/bottom = 320.0
script/script = ExtResource( 6 )

[node name="Message" type="RichTextLabel" parent="Math"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 42.0
margin/right = 400.0
margin/bottom = 62.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="Timer1" type="Timer" parent="Math"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[node name="Choices" type="Panel" parent="Math"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 160.0
margin/right = 800.0
margin/bottom = 410.0

[node name="A" type="Button" parent="Math/Choices"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 26.0
margin/right = 398.0
margin/bottom = 56.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="B" type="Button" parent="Math/Choices"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 98.0
margin/right = 398.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="C" type="Button" parent="Math/Choices"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 172.0
margin/right = 398.0
margin/bottom = 202.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Poetry" type="Panel" parent="."]

visibility/opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 440.0
margin/top = 160.0
margin/right = 1240.0
margin/bottom = 320.0
script/script = ExtResource( 7 )

[node name="Message" type="RichTextLabel" parent="Poetry"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 40.0
margin/right = 400.0
margin/bottom = 80.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="Timer2" type="Timer" parent="Poetry"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[node name="Choices" type="Panel" parent="Poetry"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 160.0
margin/right = 800.0
margin/bottom = 410.0

[node name="A" type="Button" parent="Poetry/Choices"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 26.0
margin/right = 398.0
margin/bottom = 56.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="B" type="Button" parent="Poetry/Choices"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 98.0
margin/right = 398.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="C" type="Button" parent="Poetry/Choices"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 170.0
margin/right = 400.0
margin/bottom = 200.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Clues" type="TextureButton" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 44.0
margin/right = 326.0
margin/bottom = 344.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/hover = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Note" type="TextureFrame" parent="Clues"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 428.0
margin/top = 232.0
margin/right = 2178.0
margin/bottom = 1482.0
texture = ExtResource( 10 )
stretch_mode = 0
script/script = ExtResource( 11 )

[node name="HappinessLevel" type="Panel" parent="."]

editor/display_folded = true
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 840.0
margin/top = 24.0
margin/right = 1040.0
margin/bottom = 52.0

[node name="Label" type="RichTextLabel" parent="HappinessLevel"]

rect/scale = Vector2( 1.25, 1.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 21.0
margin/top = 8.0
margin/right = 151.0
margin/bottom = 32.0
bbcode/enabled = true
bbcode/bbcode = "HAPPINESS LEVEL:"
visible_characters = -1
percent_visible = 1.0

[node name="Score" type="RichTextLabel" parent="HappinessLevel"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 1.25, 1.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -71.0
margin/top = 9.0
margin/right = -101.0
margin/bottom = -23.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[connection signal="timeout" from="SingleDialog/Timer1" to="SingleDialog/Message" method="_on_Timer1_timeout"]

[connection signal="pressed" from="SingleDialog/Button" to="SingleDialog/Message" method="_on_Button_pressed"]

[connection signal="timeout" from="Interview/Timer" to="Interview" method="_on_Timer_timeout"]

[connection signal="pressed" from="Interview/Choices/A" to="Interview" method="_on_A_pressed"]

[connection signal="pressed" from="Interview/Choices/B" to="Interview" method="_on_B_pressed"]

[connection signal="pressed" from="Interview/Choices/C" to="Interview" method="_on_C_pressed"]

[connection signal="timeout" from="Math/Timer1" to="Math" method="_on_Timer1_timeout"]

[connection signal="pressed" from="Math/Choices/A" to="Math" method="_on_A_pressed"]

[connection signal="pressed" from="Math/Choices/B" to="Math" method="_on_B_pressed"]

[connection signal="pressed" from="Math/Choices/C" to="Math" method="_on_C_pressed"]

[connection signal="timeout" from="Poetry/Timer2" to="Poetry" method="_on_Timer2_timeout"]

[connection signal="pressed" from="Poetry/Choices/A" to="Poetry" method="_on_A_pressed"]

[connection signal="pressed" from="Poetry/Choices/B" to="Poetry" method="_on_B_pressed"]

[connection signal="pressed" from="Poetry/Choices/C" to="Poetry" method="_on_C_pressed"]

[connection signal="mouse_enter" from="Clues" to="Clues/Note" method="_on_Clues_mouse_enter"]

[connection signal="mouse_exit" from="Clues" to="Clues/Note" method="_on_Clues_mouse_exit"]


